service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-python
  namespace: aluno-jonathan
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-python
  sessionAffinity: None
  type: ClusterIP
