configuracao.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-python
  name: deployment-python
  namespace: aluno-jonathan
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app-python
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app-python
    spec:
      containers:
      - image: jonathanherber/app-fase2
        imagePullPolicy: Always
        name: app-python
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: v1
kind: Service
metadata:
  name: service-python
  namespace: aluno-jonathan
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: app-python
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python
  namespace: aluno-jonathan
spec:
  rules:
  - host: app-python-jonathan.aula.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: service-python
            port:
              number: 5000
        path: /
        pathType: Prefix
