ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python
  namespace: aluno-jonathan
spec:
  rules:
  - host: app-python-jonathan.aula.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: service-python
            port:
              number: 5000
        path: /
        pathType: Prefix
